# chat-server/src/chat_server/generated/models.py
@@ -1,6 +1,6 @@
 # generated by fastapi-codegen:
 #   filename:  /Users/chrissreesangkom/ai-chat/api-spec/openapi.yaml
-#   timestamp: 2025-03-23T19:56:08+00:00
+#   timestamp: 2025-03-24T14:05:31+00:00
 
 from __future__ import annotations
 
@@ -18,10 +18,19 @@ class Thread(BaseModel):
 
 
 class Model(Enum):
-    gpt_4o_mini = 'gpt-4o-mini'
+    gpt_3_5_turbo = 'gpt-3.5-turbo'
+    gpt_4_turbo = 'gpt-4-turbo'
     gpt_4o = 'gpt-4o'
-    claude_3_7_sonnet_20250219 = 'claude-3-7-sonnet-20250219'
+    gpt_4o_mini = 'gpt-4o-mini'
+    gpt_4_5_preview = 'gpt-4.5-preview'
+    o1 = 'o1'
+    o1_mini = 'o1-mini'
+    o3_mini = 'o3-mini'
+    claude_2_1 = 'claude-2.1'
+    claude_3_opus_20240229 = 'claude-3-opus-20240229'
+    claude_3_5_haiku_20241022 = 'claude-3-5-haiku-20241022'
     claude_3_5_sonnet_20241022 = 'claude-3-5-sonnet-20241022'
+    claude_3_7_sonnet_20250219 = 'claude-3-7-sonnet-20250219'
 
 
 class Role(Enum):
